# personal-python-sandbox

./: Dockerfile  README.md  locustfile.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
api/: app.py  db.py
db/: flo_to_supabase.sh
db/csvs/: item.csv  item_in_list.csv  list.csv  user.csv
db/migrations/: 20231210172725_item.sql  20231210172917_client.sql  20231210172947_list.sql  20231210173013_item_in_list.sql
notebooks/: __init__.py  binary_search.ipynb  bingos_to_bongos.json  capacity_migration.sqlbook  funny_bunny.ipynb  hit_up_da_api.ipynb  make_db_with_polars.ipynb  my_json_data.json  new_insert.ipynb  parse_six_k_primos.ipynb  partial_caching.ipynb  python_sand.ipynb  query_postgres.ipynb  regex_metric_nice_name.ipynb  request.ipynb  super_fast.ipynb  tank_capacities_populate.ipynb
